kubernetes/reddit/comment-service.yaml
---
apiVersion: apps/v1beta2
kind: Service
metadata:
  name: comment
  labels:
    app: comment
spec:
  ports:
  - port: 9292
    targetPort: 9292
  selector:
    app: comment
