kubernetes/reddit/mongo-service.yaml
---
apiVersion: apps/v1beta2
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
