kubernetes/reddit/post-service.yaml
---
apiVersion: apps/v1beta2
kind: Service
metadata:
  name: post
  labels:
    app: post
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: post
